// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Carousel Component should render Button correctly 1`] = `
.c0 {
  position: absolute;
  top: undefinedpx;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: none;
  background-color: transparent;
}

.c0:focus {
  outline: none;
}

.c0::before {
  border-style: solid;
  border-width: 3px 3px 0 0;
  content: '';
  display: inline-block;
  height: 20px;
  left: 0;
  top: 0.25rem;
  color: white;
  position: relative;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  vertical-align: top;
  width: 20px;
}

<button
  className="c0"
  color="white"
  height={20}
  width={3}
/>
`;

exports[`Carousel Component should render Carousel correctly 1`] = `
.c1 {
  -webkit-transform: translateX(-0px);
  -ms-transform: translateX(-0px);
  transform: translateX(-0px);
  -webkit-transition: -webkit-transform ease-out 0.45s;
  -webkit-transition: transform ease-out 0.45s;
  transition: transform ease-out 0.45s;
  height: 100%;
  width: 11200px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

.c2 {
  position: absolute;
  top: 150px;
  right: 51px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: none;
  background-color: transparent;
}

.c2:focus {
  outline: none;
}

.c2::before {
  border-style: solid;
  border-width: 3px 3px 0 0;
  content: '';
  display: inline-block;
  height: 20px;
  left: 0;
  top: 0.25rem;
  color: white;
  position: relative;
  -webkit-transform: rotate(45deg);
  -ms-transform: rotate(45deg);
  transform: rotate(45deg);
  vertical-align: top;
  width: 20px;
}

.c3 {
  position: absolute;
  top: 150px;
  left: 51px;
  right: 100px;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  width: 50px;
  height: 50px;
  border-radius: 50%;
  border: none;
  background-color: transparent;
}

.c3:focus {
  outline: none;
}

.c3::before {
  border-style: solid;
  border-width: 3px 3px 0 0;
  content: '';
  display: inline-block;
  height: 20px;
  left: 0;
  top: 0.25rem;
  color: white;
  position: relative;
  -webkit-transform: rotate(-135deg);
  -ms-transform: rotate(-135deg);
  transform: rotate(-135deg);
  vertical-align: top;
  width: 20px;
}

.c0 {
  position: relative;
  width: 800px;
  overflow: hidden;
  padding: 0px 0;
}

<div
  className="c0"
  height={300}
  width={800}
>
  <div
    className="c1"
    width={11200}
  >
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-pzy0xz-Slide"
      />
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1sz8str-Slide"
      >
        <span
          className="capture-class"
        >
           Image second 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-php6v4-Slide"
      >
        <span
          className="capture-class"
        >
           Image third 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-12otvzt-Slide"
      >
        <span
          className="capture-class"
        >
          Image 4th 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-tftcnt-Slide"
      >
        <span
          className="capture-class"
        >
           Image 5th
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1h2qrbe-Slide"
      >
        <span
          className="capture-class"
        >
           some capyture 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1unxbwy-Slide"
      >
        <span
          className="capture-class"
        >
           some capyture 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-pzy0xz-Slide"
      >
        <span
          className="capture-class"
        >
           Image first 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1sz8str-Slide"
      >
        <span
          className="capture-class"
        >
           Image second 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-php6v4-Slide"
      >
        <span
          className="capture-class"
        >
           Image third 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-12otvzt-Slide"
      >
        <span
          className="capture-class"
        >
          Image 4th 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-tftcnt-Slide"
      >
        <span
          className="capture-class"
        >
           Image 5th
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1h2qrbe-Slide"
      >
        <span
          className="capture-class"
        >
           some capyture 
        </span>
      </div>
    </div>
    <div
      className="css-12155ub-Slide"
    >
       
      <div
        className="css-1unxbwy-Slide"
      >
        <span
          className="capture-class"
        >
           some capyture 
        </span>
      </div>
    </div>
  </div>
  <button
    className="c2"
    color="white"
    height={20}
    onClick={[Function]}
    width={3}
  />
  <button
    className="c3"
    color="white"
    height={20}
    onClick={[Function]}
    width={3}
  />
</div>
`;

exports[`Carousel Component should render CarouselContent correctly 1`] = `
.c0 {
  -webkit-transform: translateX(-px);
  -ms-transform: translateX(-px);
  transform: translateX(-px);
  -webkit-transition: -webkit-transform ease-out s;
  -webkit-transition: transform ease-out s;
  transition: transform ease-out s;
  height: 100%;
  width: px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
}

<div
  className="c0"
/>
`;

exports[`Carousel Component should render CarouselItem correctly 1`] = `
<div
  className="css-bd7xg4-Slide"
>
   
  <div
    className="css-pzy0xz-Slide"
  />
</div>
`;

exports[`Carousel Component should render CarouselWrapper correctly 1`] = `
.c0 {
  position: relative;
  width: undefinedpx;
  overflow: hidden;
  padding: undefinedpx 0;
}

<div
  className="c0"
/>
`;
